<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:textColor="@color/title_text"
            android:textSize="@dimen/title_text_size"
            android:text="@string/welcome" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:textColor="@color/normal_text"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:textColor="@color/normal_text"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:textColor="@color/normal_text"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/to_the_web" />
        
        <Button
            android:id="@+id/to_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
	        android:paddingTop="@dimen/padding"
	        android:paddingBottom="@dimen/padding"
	        android:textColor="@color/btn_text"
	        android:textSize="@dimen/normal_text_size"
	        android:textStyle="bold"
	        android:background="@color/primary_btn_bg"
            android:text="@string/web_name"/>
    </LinearLayout>
</ScrollView>